--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.25.0",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
+    "moralis": "^1.3.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.9.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.4",
     "web-vitals": "^2.1.4"
