--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "axios": "^0.25.0",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
     "moralis": "^1.3.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.9.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "sass": "^1.49.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
